@@ -1,3 +1,5 @@
+Mar 30, 2025: libarchive 3.7.9 released
+
 Mar 20, 2025: libarchive 3.7.8 released
 
 Oct 13, 2024: libarchive 3.7.7 released
